...
                                           userWantsToExit: .constant(false),
                                           gameIsInWelcomeMode: true)
                            .frame(maxWidth: miniGameWidth,
                                   maxHeight: miniGameWidth,
                                   alignment: .center)
                            .padding([.leading, .trailing], 16.0)
                            .accessibilityIdentifier("Welcome Moji Demo View")
                        Spacer()
                        HStack {
                            Button(action: {
                                userPrefersDarkMode.toggle()
                            }) {
                                ZStack {
...
                                }
                            }
                            .frame(width: width * 0.1, alignment: .center)
                            .onChange(of: userPrefersDarkMode) { _,preference in
                                newMainViewModel.updateTheme(shouldBeDark: preference)
                            }
                            .accessibilityIdentifier("darkModePreference")

                            Picker("", selection: $newMainViewModel.currentGlobalFiat) {
                                    ForEach(newMainViewModel.globalCurrencies, id: \.self) {
                                        Text("\($0.fullCurrencyName)   \($0.code) (\($0.symbol))")
                                            .font(selectorFont)
                                            .frame(maxWidth: .infinity,
...
                                    )
                                    .accessibilityIdentifier("readyCreateNewBrainwalletButtonTitle")

                            }
                            .padding(.all, 6.0)
                        }
                        .accessibilityIdentifier("readyCreateNewBrainwalletButton")

                        Button(action: {
                            isRestoringAnOldWallet = true
                            path.append(.restoreView)
                        }) {
                            ZStack {
...
                                    )
                                    .accessibilityIdentifier("restoreYourBrainwalletButtonTitle")

                            }
                            .padding(.all, 6.0)
                        }
                        .accessibilityIdentifier("restoreYourBrainwalletButton")

                        HStack {
                            Text(AppVersion.string)
                                .frame(alignment: .center)
                                .modifier(BWIPSRegular(size: 11.0))
                                .foregroundColor(BrainwalletColor.content)
...
